--- a/laToque.css
+++ b/laToque.css
@@ -19,8 +19,7 @@ li{list-style-type:none;margin-bottom: 20px;}
 /*page 3*/
 #fond3{background-color:rgb(29, 28, 27);width: 100%;background-size: cover;text-align: center;}
 #carrousel{padding-top: 100px;padding-bottom: 100px;}
-video{height: 800px;border:5px double rgb(243, 192, 126);}
-#carrousel p{color:rgb(243, 192, 126);font-family: 'alex';font-size: 2rem;}
+#carrousel p{color:rgb(243, 192, 126);font-family: 'alex';font-size: 2rem;margin-top:200px;}
 #fond4{display: flex;flex-direction: row;}
 #fondCarte2{background: url('./images/fondCarte.jpg');background-size: cover  ;height: 800px;width: 550px;margin-top: 100px;margin-bottom: 100px;}
 #fondCarte3{background: url('./images/fondCarte.jpg');background-size: cover ;width: 600px;height:900px;margin-top: 100px;margin-bottom:100px;}
@@ -32,27 +31,6 @@ small{color:rgb(243, 192, 126);}
 .footer p{color:rgb(243, 192, 126);margin-right: 30px;margin-bottom: 10px;} .footer a{text-decoration: none;color:rgb(243, 192, 126);}
 a:active{color:rgb(243, 192, 126);}
 
-@media all and (max-device-width:480px)/*iphone6/7/8plus*/
-{
-    #fond{flex-direction: column;}
-    #logo h1{position:absolute;top: 100px;margin-left:125px ;font-size: 1.2rem;}
-    #logo img{width: 265px;}
-    .bloc-left{margin-top: 5px;}
-    .bloc-right{max-width:390px ;position:absolute;right: 10px;top:750px;}
-    #fond2{padding-top:400px;padding-bottom: 50px;}
-    #fondCarte{margin-bottom: 0px;}
-    #fondCarte p{color:rgb(243, 192, 126);margin-left: 80px;margin-top: 80px;font-family: 'alex';font-size: 1.5rem;}
-    #fondCarte2{margin-bottom: 30px;}
-    #fondCarte3{margin-bottom: 50px;margin-top: 10px;height: 1050px;}
-    #formulaire{margin-left:80px;}
-    video{height: 150px;}
-    .footer{flex-direction: column;padding-bottom: 20px;}
-   
-}
-@media all and (max-device-width:375px)/*iphone6/7/8*/
-{
-    .bloc-right{max-width: 360px;}
-}
 
 @media all and (max-device-width:320px)/*iphone5*/
 {
@@ -61,36 +39,68 @@ a:active{color:rgb(243, 192, 126);}
     #logo img{width: 265px;}
     .bloc-left{margin-top: 5px;}
     .bloc-right{max-width:290px ;position:absolute;right: 15px;top:750px;}
-    #fond2{padding-top:350px;padding-bottom: 50px;}
+    #fond2{padding-top:440px;padding-bottom: 50px;}
+    #carrousel p{margin-top: 150px;}
     #fondCarte{margin-bottom: 0px;}
     #fondCarte p{color:rgb(243, 192, 126);margin-left: 80px;margin-top: 80px;font-family: 'alex';font-size: 1.5rem;}
     #fondCarte2{margin-bottom: 30px;}
     #fondCarte3{margin-bottom: 50px;margin-top: 10px;height: 1050px;}
     #formulaire{margin-left:80px;}
-    video{height: 150px;}
+    
     .footer{flex-direction: column;padding-bottom: 20px;}
 }
+@media all and (min-width: 321px) and (max-device-width:375px)/*iphone6/7/8*/
+{
+    #fond{flex-direction: column;}
+    #logo h1{position:absolute;top: 100px;margin-left:105px ;font-size: 1.2rem;}
+    #logo img{width: 265px;}
+    .bloc-left{margin-top: 5px;}
+    .bloc-right{max-width: 360px;top:750px}
+    #fond2{padding-top:480px;padding-bottom: 50px;}
+    #fondCarte{margin-bottom: 0px;margin-top:50px;}
+    #carrousel p{margin-top: 150px;}
+    #fondCarte2, #fondCarte3{margin-bottom: 30px;margin-top:50px;}
+}
 
-@media all and (max-device-width:768px)/*ipad*/
+@media all and (min-width: 376px) and (max-device-width:480px)/*iphone6/7/8plus*/
 {
     #fond{flex-direction: column;}
     #logo h1{position:absolute;top: 100px;margin-left:125px ;font-size: 1.2rem;}
     #logo img{width: 265px;}
     .bloc-left{margin-top: 5px;}
-    .bloc-right{width:750px ;position:absolute;right: 10px;top:750px;}
-    #fond2{padding-top:400px;padding-bottom: 50px;}
-    #fondCarte{margin-bottom: 0px;}
+    .bloc-right{max-width:390px ;position:absolute;right: 10px;top:750px;}
+    #fond2{padding-top:450px;padding-bottom: 50px;}
+    #fondCarte{margin-bottom: 0px;margin-top:50px;}
     #fondCarte p{color:rgb(243, 192, 126);margin-left: 80px;margin-top: 80px;font-family: 'alex';font-size: 1.5rem;}
     #fondCarte2{margin-bottom: 30px;}
     #fondCarte3{margin-bottom: 50px;margin-top: 10px;height: 1050px;}
+    #carrousel p{margin-top: 150px;}
     #formulaire{margin-left:80px;}
-    video{height: 250px;}
+    .footer{flex-direction: column;padding-bottom: 20px;}
+   
+}
+@media all and (min-width:481px) and (max-device-width:768px)/*ipad*/
+{
+    #fond{flex-direction: column;}
+    #logo h1{position:absolute;top: 90px;margin-left:275px ;font-size: 1.6rem;}
+    #logo img{width: 265px;}
+    .bloc-left{margin-top: 5px;}
+    .bloc-right{width:750px ;position:absolute;right: 10px;top:750px;}
+    .bloc-right p{font-size: 1.5rem;}
+    #fond2{padding-top:400px;padding-bottom: 50px;}
+    #fondCarte{margin-bottom: 0px;}
+    #fondCarte p{color:rgb(243, 192, 126);margin-left: 80px;margin-top: 80px;font-family: 'alex';font-size: 1.5rem;}
+    #carrousel p{margin-top: 150px;font-size: 2rem;}
+    #fondCarte2{margin-bottom: 30px;}
+    #fondCarte3{margin-bottom: 50px;margin-top: 10px;height: 1050px;}
+    #formulaire{margin-left:80px;}
     .footer{flex-direction: column;padding-bottom: 20px;}
 }
 
-@media all and (max-device-width:1024px)/*ipad pro*/
+@media all and (min-width: 769px) and (max-device-width:1024px)/*ipad pro*/
 {
     #logo img{width: 220px;}
     #logo h1{top:80px; margin-left:60px;font-size: 1.2rem;}
-    #fond3 video{height: 400px;}
+    .bloc-right{width:500px ;margin-right: 40px;}
+    #carrousel p{margin-top: 150px;font-size: 2rem;}
 }
